samples/_failures_safe/1761510200_2a1026_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_28b5d87c.c: In function ‘process_compression’:
./samples/SAFE/__tmp_28b5d87c.c:175:5: error: expected expression at end of input
  175 |     printf("Result (%s %s, %zu bytes): ", op_name, type_name,
      |     ^~~~~~
./samples/SAFE/__tmp_28b5d87c.c:175:5: error: expected declaration or statement at end of input
